--- a/carros/templates/list_carros.html
+++ b/carros/templates/list_carros.html
@@ -11,9 +11,10 @@
 <body>
     <h1>Vista Carros</h1>
 
-<form action="">
+<form action="{% url 'form_1' %}" method="POST">
+    {% csrf_token %}
     <label for="marca">Marca:</label>
-    <select name="marca" id="marca">
+    <select name="marca">
         <option value="toyota">Toyota</option>
         <option value="honda">Honda</option>
         <option value="ford">Ford</option>
@@ -21,7 +22,7 @@
     </select>
 
     <label for="modelo">Modelo:</label>
-    <select name="modelo" id="modelo">
+    <select name="modelo">
         <option value="corolla">Corolla</option>
         <option value="civic">Civic</option>
         <option value="focus">Focus</option>
@@ -29,15 +30,15 @@
     </select>
 
     <label for="anio">Año:</label>
-    <input type="date" name="anio" id="anio" placeholder="Ingrese el año">
+    <input type="number" name="anio" placeholder="Ingrese el año" maxlength="4" pattern="\d{1,4}">
 
     <label for="precio_por_dia">Precio por día:</label>
-    <input type="text" name="precio_por_dia" id="precio_por_dia" placeholder="Ingrese el precio por día" maxlength="10" pattern="\d{1,10}">
+    <input type="text" name="precio_por_dia" placeholder="Ingrese el precio por día" maxlength="10" pattern="^\d{1,10}(\.\d{1,2})?$">
 
     <label for="disponible">Disponible:</label>
-    <input type="text" name="disponible" id="disponible" placeholder="Ingrese la disponibilidad">
+    <input type="text" name="disponible" placeholder="Ingrese la disponibilidad">
 
-    <button type="submit">Guardar</button>
+    <button>Guardar</button>
 </form>
 
 </body>
