--- a/carros/templates/list_carros.html
+++ b/carros/templates/list_carros.html
@@ -36,7 +36,7 @@
     <input type="text" name="precio_por_dia" placeholder="Ingrese el precio por día" maxlength="10" pattern="^\d{1,10}(\.\d{1,2})?$">
 
     <label for="disponible">Disponible:</label>
-    <input type="text" name="disponible" placeholder="Ingrese la disponibilidad">
+    <input type="number" name="disponible" placeholder="Ingrese la disponibilidad" min="1" required>
 
     <button>Guardar</button>
 </form>
