--- a/carros/templates/reservaciones.html
+++ b/carros/templates/reservaciones.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+<nav>
+    <ul>
+        <li><a href="{% url 'list_carros' %}">Carros</a></li>
+        <li><a href="{% url 'lista_clientes' %}">Clientes</a></li>
+        <li><a href="{% url 'lista_reservaciones' %}">Reservaciones</a></li>
+    </ul>
+</nav>
     <h1>reservaciones</h1>
     
 </body>
