--- a/carros/templates/reservar_auto.html
+++ b/carros/templates/reservar_auto.html
@@ -14,8 +14,8 @@
         <li><a href="{% url 'lista_reservaciones' %}">Reservaciones</a></li>
     </ul>
 </nav>
-    <h1>Modificar elementos</h1>
-    <h2>Modificar informacion del vehiculo</h2>
+    <h1>Reservaci&oacute;n</h1>
+    <h2>Reservaci&oacute;n del veh&iacute;culo</h2>
     <div>
         
     </div>
