--- a/carros/templates/clientes.html
+++ b/carros/templates/clientes.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Clientes</title>
 </head>
 <body>
 <nav>
@@ -15,11 +15,18 @@
     </ul>
 </nav>
     <h1>Clientes</h1>
+
+{% if error %}
+    <div class="error" style="color: red;">
+        {{ error }}
+    </div>
+{% endif %}
+
     <form action="{% url 'form_2' %}" method="POST">
     {% csrf_token %}
     
-    <label for="Nombre">Nombre:</label>
-    <input type="text" name="Nombre" placeholder="Ingresa tu nombre" required>
+    <label for="nombre">Nombre:</label>
+    <input type="text" name="nombre" placeholder="Ingresa tu nombre" required>
     
     <label for="apellidos">Apellidos:</label>
     <input type="text" name="apellidos" placeholder="Ingresa tus apellidos" required>
@@ -33,10 +40,34 @@
     <label for="no_licencia">Número de licencia:</label>
     <input type="text" name="no_licencia" placeholder="Ingresa tu número de licencia" required>
     
-    <button type="submit">Guardar</button>
-</form>
+    <button>Guardar</button>
 
+    <div class="tabla">
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Apellidos</th>
+                    <th>Direccion</th>
+                    <th>Telefeno</th>
+                    <th>No. Licencia</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for cliente in clientes %}
+                <tr>
+                    <td>{{ cliente.nombre }}</td>
+                    <td>{{ cliente.apellidos }}</td>
+                    <td>{{ cliente.direccion }}</td>
+                    <td>{{ cliente.telefono }}</td>
+                    <td>{{ cliente.no_licencia }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
+    
+</form>
 
 </body>
 </html>
