--- a/carros/templates/list_carros.html
+++ b/carros/templates/list_carros.html
@@ -17,7 +17,11 @@
     </ul>
 </nav>
     <h1>Vista Carros</h1>
-
+{% if error %}
+    <div class="error" style="color: red;">
+        {{ error }}
+    </div>
+{% endif %}
 <form action="{% url 'form_1' %}" method="POST">
     {% csrf_token %}
     <label for="marca">Marca:</label>
