--- a/carros/templates/list_carros.html
+++ b/carros/templates/list_carros.html
@@ -14,6 +14,7 @@
         <li><a href="{% url 'list_carros' %}">Carros</a></li>
         <li><a href="{% url 'lista_clientes' %}">Clientes</a></li>
         <li><a href="{% url 'lista_reservaciones' %}">Reservaciones</a></li>
+        <li><a href="{% url 'Auto-list' %}">API</a></li>
     </ul>
 </nav>
     <h1>Vista Carros</h1>
@@ -91,8 +92,8 @@
                             <!-- Opción Reservar, se pasa el ID y la matricula -->
                             <a href="{% url 'reservar_auto' auto.id %}">Reservar</a>
                             
-                            <!-- Opción Ver, se pasa el ID y la matricula
-                            <a href="{% url 'ver_auto' auto.id %}">Ver</a>-->
+                            <!-- Opción Ver, se pasa el ID y la matricula-->
+                            <a href="{% url 'Auto-detail' auto.id %}">API</a>
                         </div>
                     </div>
                 </td>
